Add the history

--- a/www/json/index.html
+++ b/www/json/index.html
@@ -15,8 +15,8 @@
     </style>
 </head>
 <body>
-    <textarea id="synced"></textarea><br><br>
-    Prop : <input type="text" id="prop"> Value : <input type="text" id="value"> <button id="send">Send</button><br>
+    <textarea id="synced" disabled="disabled"></textarea><br><br>
+    Prop : <input type="text" id="prop" disabled="disabled"> Value : <input type="text" id="value" disabled="disabled"> <button id="send">Send</button><br>
     <button id="getvalue">Get current value</button>
 </body>
 </html>
